# Py-Outlier

./: .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: analyze.py  health.py
backend/app/core/: config.py  logging.py
backend/app/llm/: synthesizer.py
backend/app/ml/: gradcam.py  model.py  preprocess.py
backend/app/models/: schemas.py
backend/app/workers/: tasks.py
backend/tests/: test_api.py  test_ml.py
frontend/: Dockerfile  next.config.ts  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/form/: page.tsx
frontend/components/: AnalysisResultCard.tsx  Spinner.tsx
frontend/tests/: AnalysisResultCard.test.tsx
scripts/: evaluate.py  train.py
